# Game-Boy-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt
src/: constants.h  main.cpp  types.h
src/addressBus/: addressBus.cpp  addressBus.h
src/cartridge/: cartridge.cpp  cartridge.h
src/cpu/: RegisterPair.cpp  RegisterPair.h  arithmeticInstructions.cpp  bitInstructions.cpp  cpu.h  execute_instruction.cpp  instructionHelperFunctions.cpp  instructionLengths.h  jumpCallInstructions.cpp  loadInstructions.cpp  miscInstructions.cpp  opcodeData.h  opcodeImplementations.cpp
src/gb/: gameboy.cpp  gameboy.h
tests/: adressbustests.cpp  cartridgetests.cpp  cputests.cpp  instructiontests.cpp
